--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,6 +3,7 @@ dependencies: []
 
 galaxy_info:
   author: Rocketplan
+  description: "Pure NGiNX role"
   company: "Rocketplan, LLC"
   license: "MIT"
 
